# nativeagents-sdk-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
contract/: 01-directory-layout.md  02-plugin-manifest.md  03-audit-schema.md  04-memory-manifest.md  05-hooks.md  06-spool.md  07-install-registration.md  08-config.md  09-cli-conventions.md  10-versioning.md  11-conformance.md  12-policy.md  README.md
dev/: README.md  spec.md  successcriteria.md
examples/minimal_plugin/: README.md  plugin.toml  pyproject.toml  smoke.sh
examples/minimal_plugin/hooks/: hook.sh
examples/minimal_plugin/src/minimal_plugin/: __init__.py  cli.py  hook.py
examples/minimal_plugin/tests/: test_minimal.py
src/nativeagents_sdk/: __init__.py  config.py  errors.py  paths.py  version.py
src/nativeagents_sdk/audit/: __init__.py  chain.py  ddl.sql  integrity.py  migrations.py  store.py
src/nativeagents_sdk/cli/: __init__.py  check_contract.py  init_plugin.py  main.py  validate_plugin.py
src/nativeagents_sdk/conformance/: __init__.py  fixtures.py  harness.py
src/nativeagents_sdk/hooks/: __init__.py  dispatcher.py  runtime.py  template.sh
src/nativeagents_sdk/install/: __init__.py  doctor.py  register.py  shims.py  venv.py
src/nativeagents_sdk/memory/: __init__.py  frontmatter.py  manifest.py
src/nativeagents_sdk/plugin/: __init__.py  discovery.py  manifest.py
src/nativeagents_sdk/policy/: __init__.py  matcher.py
src/nativeagents_sdk/schema/: __init__.py  audit.py  events.py  frontmatter.py  manifest.py  plugin.py
src/nativeagents_sdk/spool/: __init__.py  spool.py
tests/: conftest.py  test_audit_chain.py  test_audit_concurrent.py  test_audit_integrity.py  test_audit_migrations.py  test_audit_property.py  test_audit_store.py  test_cli_check_contract.py  test_cli_init_plugin.py  test_cli_validate_plugin.py  test_config.py  test_conformance_fixtures.py  test_conformance_harness.py  test_coverage_gaps.py  test_hooks_dispatcher.py  test_hooks_runtime.py  test_install_doctor.py  test_install_register.py  test_install_shims.py  test_install_venv.py  test_memory_frontmatter.py  test_memory_manifest.py  test_paths.py  test_plugin_discovery.py  test_plugin_manifest.py  test_policy_matcher.py  test_public_api.py  test_schema_events.py  test_smoke.py  test_spool.py
tests/e2e/: test_plugin_lifecycle.py
tests/fixtures/: hash_chain_vectors.json  minimal_manifest.json  minimal_plugin.toml  sample_claude_settings.json
tests/fixtures/sample_hook_events/: post_tool_use.json  pre_tool_use.json  (+2 more)
(+6 files in other folders)
